[package]
name = "encrypto_aes"
version = "0.2.0"
edition = "2021"
description = "stunning-encrypto is cross platform end-to-end encryption dependency. And this is AES extension of the same"
homepage = "https://www.ssdd.dev/zot/crypto/aes"
repository = "https://github.com/zotcrypto/encrypto-aes"
readme = "README.md"
keywords = ["AES", "end-to-end-encrypton", "stunning-encrypto", "encryption", "rust-e2ee"]
categories = ["cryptography"]
license = "MIT"

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.3", features = ["rand", "serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = {version = "1.0.89"}
base64 = "0.13.1"